# Senior-Project

Gazebo-ORBslam3/: world
orbslam3-px4/: 2d_lidar.sdf  2d_lidar_gst_plugin.cpp  2d_lidar_visualization_from_gst.cpp  3d_lidar.sdf  3d_lidar_gst_plugin.cpp  3d_lidar_visualization_from_gst.cpp  CMakeLists_rgblslam.txt  CMakeLists_vis.txt  README.md  System.cc  System.h  export_map_rgbl.cpp  gst_rgbl_camera.yaml  gst_rgbl_slam.cpp  lidar.sdf  lidar.world  lidar_gst_plugin.cpp  lidar_gst_receiver.cpp  lidar_visualization.cpp  lidar_visualization_from_files.cpp  lidar_visualization_from_gst.cpp  map_points.pcd  map_points.ply  threads_lidar_visualization_from_gst.cpp
ros2-ws/lidar_visualization/: CMakeLists.txt  package.xml
ros2-ws/lidar_visualization/launch/: unitree_lidar_launch.py
ros2-ws/lidar_visualization/src/: lidar_visualization_node.cpp
ros2-ws/orbslam3_ros2/: CMakeLists.txt  TEMP_rgbl_realsense_unitree_config.yaml  monocular_config.yaml  monocular_realsense_config.yaml  package.xml  stereo_realsense_config.yaml
ros2-ws/orbslam3_ros2/launch/: track_monocular_realsense_launch.py  track_rgbl_launch.py  track_rgbl_realsense_unitree_launch.py  track_stereo_realsense_launch.py
ros2-ws/orbslam3_ros2/src/: realsense_subscriber.cpp  track_monocular_node.cpp  track_rgbl_node.cpp  track_stereo_node.cpp
ros2-ws/orbslam3_ros2/src/orbslam3_src/: System.cc
ros2-ws/unitree_lidar_ros2/: CMakeLists.txt
ros2-ws/unitree_lidar_ros2/launch/: launch.py
sclam-setup/: armadillo-install.sh  gtsam-install.sh  opencv-install.sh  px4-install.sh  ros-install.sh  webots-install.sh
ubuntu22-setup/: README.md
